<resources>
    <string name="app_name">VillalobosLab2019</string>
    <string name="android">Android 2019</string>
    <string name="hello_world">hello world</string>
    <string name="butto_1">HELLO WORLD</string>
    <string name="button_2">TIMEFIGHTER</string>
    <string name="button_3">TAP ME</string>
    <string name="time">Time</string>
    <string name="time_left">Time Left:%s</string>
    <string name="footer">Alfonso Villalobos Ulate alfonsocv12</string>
    <string name="score">Your score:%s</string>
    <string name="end_game">End Game:%s</string>
    <string name="restart">Restart</string>
    <string name="fahrenheit_celsius">Temp converter</string>
    <string name="title_temp_converter">Convert fahrenheit to celcius</string>
    <string name="convert_button">Convert</string>
    <string name="fahrenheit_edit_text">fahrenheit</string>
    <string name="button_4">dialog</string>
    <string name="show_dialog">show dialog</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="dialog_btn">Dialog management</string>
    <string name="accept_btn">accept</string>
    <string name="arch_img_description">arch img</string>
    <string name="sure_txt">Are you sure</string>
    <string name="show_img_btn">show image</string>
    <string name="logout">logout</string>
    <string name="loading">loading...</string>
    <string name="loading_imd_description">Loading img</string>
    <string name="button_playground">playground</string>
    <string name="button_playground_toast">show toast</string>
    <string name="button_playground_loop">Loop</string>
    <string name="button_imc">Calculate Imc</string>
    <string name="input_name">Name</string>
    <string name="input_last">Last Name</string>
    <string name="input_height">Height</string>
    <string name="input_width">Width</string>
    <string name="button_calculate">Calculate</string>
    <string name="avatar_img_description">avatar</string>
    <string name="button_qr">read qr</string>
    <string name="shake_gesture_tittle">Rock Paper Scissors</string>
    <string name="img_placeholder_description">Placeholder</string>
    <string name="button_rock_paper_scissors">Rock Paper Scissors</string>
    <string name="text_rock">Rock</string>
    <string name="text_paper">Paper</string>
    <string name="text_scissors">Scissors</string>
    <string name="text_shake">Shake Phone</string>
    <string name="button_shared_preferences">Shared Preferences</string>
</resources>
