<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
            android:id="@+id/txtName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:id="@+id/txtEmail"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <Button
                android:id="@+id/btnLogin"
                android:text="@string/login"
                style="?android:attr/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                style="?android:attr/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>